# CandyBurstGame

./: README.md  Readme.docx
candyCrush/: IListener.h  ISender.h
candyCrush/Game/: CandyCrushGame.cpp  CandyCrushGame.h
candyCrush/Gameplay/: CandyFactory.cpp  CandyFactory.h  GamePlay.cpp  GamePlay.h  Level.cpp  Level.h  MainBorad.cpp  MainBorad.h
candyCrush/Input/: InputController.cpp  InputController.h
candyCrush/Menus/: CandyCrushMenus.cpp  CandyCrushMenus.h  MenuManger.cpp  MenuManger.h
candyCrush/Player/: Player.cpp  Player.h
candyCrush/Score/: ScoreBoard.cpp  ScoreBoard.h
candyCrush/Singleton/: Singleton.h
candyCrush/Sounds/: SoundManager.cpp  SoundManager.h
candyCrush/States/: ICandyCrushState.cpp  ICandyCrushState.h  StateManager.cpp  StateManager.h
candyCrush/Timer/: TimerManager.cpp  TimerManager.h
cmake/: compiler_features.cmake  sfml.cmake
engine/: CMakeLists.txt
engine/include/: engine.h
engine/src/: dummy.cpp  game.h  mouse.h  sprite.h  text.h  window.h
engine/src/precompiled/: pch.h
sample/: CMakeLists.txt
sample/src/: main.cpp  sample.h
sample/src/precompiled/: pch.h
